Roll back overflow for IE fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,6 @@
 body, html {
   font-family: 'Roboto' !important;
   background: #f5f5f5;
-  overflow-y: scroll;
   h1, h2, h3, h4, h5, h6, p, a {
    font-family: 'Roboto' !important;
   }
